--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,15 +12,16 @@ services:
 
   webapp1:
     image: express-api
-    ports:
-      - "8001:3000"  # Map the port inside the container to the host
     networks:
       - my_network
 
   webapp2:
     image: express-api
-    ports:
-      - "8002:3000"  # Map the port inside the container to the host
+    networks:
+      - my_network
+
+  webapp3:
+    image: express-api
     networks:
       - my_network
 
