--- a/nginx.conf
+++ b/nginx.conf
@@ -4,9 +4,8 @@ events {
 
 http {
   upstream myapp {
-    server webapp1:3000;
-    server webapp2:3000;
-    server webapp3:3000;
+    server express-api-1:3000;
+    server express-api-2:3000;
   }
 
   server {
