--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,8 @@ http {
   upstream myapp {
     server express-api-1:3000;
     server express-api-2:3000;
+    server go-api-1:8080;
+    server go-api-2:8080;
   }
 
   server {
